welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:5: error: value =! is not a member of Int
  if (a!=b & b=!c & a!=c) {
              ^